--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -20,9 +20,9 @@
   <!--Grid row-->
 
   <div class="container videom">
-
+     <% if(videos.length!==0) {%>
     <center style="margin-bottom:80px;"><h1> VIDEO LECTURES</h1></center>
-
+      <% } %>
 
 <div class="row mb-5">
     <% if(videos.length===0) {%>
