--- a/public/stylesheet/team/cardlayout.css
+++ b/public/stylesheet/team/cardlayout.css
@@ -35,9 +35,14 @@
 	}
 	.navbar .navbar-brand, .navbar .navbar-brand:hover, .navbar .navbar-brand:focus {
 		padding-left: 0;
+        margin-top:10px;
 		font-size: 20px;
 		padding-right: 50px;
 	}
+.nav-link{
+  margin-top:10px;
+    font-size:1.8rem;
+}
 	.navbar .navbar-brand b {
 		font-weight: bold;
 		color: #33cabb;		
