--- a/views/about.ejs
+++ b/views/about.ejs
@@ -28,7 +28,7 @@
     
       <div class="flip-card-front">
         <div class="flip-card-img">
-          <img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+          <img src="https://i1.rgstatic.net/ii/profile.image/279259575799811-1443592079274_Q512/Amit_Neogi.jpg" alt="Avatar Placeholder" />
         </div>
         <div class="flip-card-text">
           <h3 style="text-align: center;color:grey">Prof. Amit Neogi</h3>
@@ -37,7 +37,7 @@
       
     </div>
   </div>
-   <h3>
+   <h3 style="margin-top:50px;">
       "The course is divided into Two Sections one is UG Classical Physics Course and the other is UG physics Lab. Laboratory work is also a very important part of a course in General Physics. It reinforces the student’s understanding of fundamental concepts and principles while, at the same time, helping the student to develop skill in carrying out scientific measurements. It is designed in such a way that the students can understand the basics of Physics through hands on experiments."
      </h3>
 
