--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Welcome, <%=user.username%></a></li>
 			<li class="nav-item">
 				<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="/auth/logout">Loggout</a> -->
-				<a class="nav-link btn btn-primary get-started-btn mt-1 mb-1 " href="/auth/logout">Logout</a>
+				<a class=" nav-link btn  get-started-btn mt-1 mb-1 " href="/auth/logout" style="background:red; font-size:1.5rem; color:white;">LOGOUT</a>
 			</li>
 					<% } else { %>
 			<li class="nav-item">
