updated images in cards

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -214,7 +214,7 @@
 		
 			<div class="flip-card-front">
 				<div class="flip-card-img">
-					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+					<img src="/public/team/about1.jpg" />
 				</div>
 				<div class="flip-card-text">
 					<a href="/about"><h2 style="text-align: center;">About Us</h2></a>
@@ -227,7 +227,7 @@
 	<div class="flip-card">
 			<div class="flip-card-front">
 				<div class="flip-card-img">
-					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+					<img src="/public/team/instructor1.jpg" alt="Avatar Placeholder" />
 				</div>
 				<div class="flip-card-text">
                     <a href="/instructor"><h2 style="text-align: center;">Instructor</h2></a>
@@ -241,7 +241,7 @@
 		
 			<div class="flip-card-front">
 				<div class="flip-card-img">
-					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+					<img src="/public/team/contact.jpg" alt="Avatar Placeholder" />
 				</div>
 				<div class="flip-card-text">
 					<a href="/contact"><h2 style="text-align: center;">Contact</h2></a>
@@ -255,7 +255,7 @@
 		
 			<div class="flip-card-front">
 				<div class="flip-card-img">
-					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+					<img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&auto=format&fit=crop&w=541&q=80" alt="Avatar Placeholder" />
 				</div>
 				<div class="flip-card-text">
 					<a href="/resources"><h2 style="text-align: center;">Resources</h2></a>
@@ -270,7 +270,7 @@
 		
 			<div class="flip-card-front">
 				<div class="flip-card-img">
-					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+					<img src="https://images.unsplash.com/photo-1562240020-ce31ccb0fa7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1868&q=80" alt="Avatar Placeholder" />
 				</div>
 				<div class="flip-card-text">
 					<a href="/upload"><h2 style="text-align: center;">Let's Upload</h2></a>
@@ -284,7 +284,7 @@
 		
 			<div class="flip-card-front">
 				<div class="flip-card-img">
-					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+					<img src="/public/team/addvideo.jpg" alt="Avatar Placeholder" />
 				</div>
 				<div class="flip-card-text">
 					<a href="/addvideo"><h2 style="text-align: center;">Add Video</h2></a>
