--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -34,6 +34,7 @@
             </div>
                   
                   <center style="margin-bottom:50px;">
+                    <a class="btn btn-lg btn-success" href="/upload/<%=file.fname%>" target="_blank">Preview</a>
                 <a class="btn btn-lg btn-primary" href="/upload/<%=file.fname%>" download="<%=file.fname%>" >Download File</a>
                               <% if(user&&user.admin) {%> 
                                     <form action="/delete/notes/<%=file._id%>/<%=file.fname%>?_method=delete" method="post" style="display:inline;">
