--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
 		<a class="navbar-brand" href="/">CLASSICAL<b>PHYSICS</b></a>  		
-		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
+		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto" style="margin-top:15px;">
 			<span class="navbar-toggler-icon"></span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
