added notes and papers

--- a/views/tableofcontents.ejs
+++ b/views/tableofcontents.ejs
@@ -44,6 +44,7 @@
                       <li><a href="#CH10"><span class="fa fa-angle-double-right"></span>Chapter:10</a></li>
                        <li><a href="#CH11"><span class="fa fa-angle-double-right"></span>Chapter:11</a></li>
                         <li><a href="#CH12"><span class="fa fa-angle-double-right"></span>Chapter:12</a></li>
+                <li><a href="#assignments"><span class="fa fa-angle-double-right"></span>Assignments and Papers</a></li>
 
             </ul>
           </li>
@@ -493,6 +494,23 @@
   <li> <a href="https://ocw.mit.edu/courses/physics/8-01sc-classical-mechanics-fall-2016/week-2-newtons-laws/4.4-non-inertial-reference-frames/">Non-inertial Reference Frames</a>.</li>
   <li> <a href="https://ocw.mit.edu/resources/res-tll-004-stem-concept-videos-fall-2013/videos/representations/rotating-frames-of-reference/">Rotating Frames of Reference</a>.</li>
   <li> <a href="https://ocw.mit.edu/search/ocwsearch.htm?q=noninertialframeofreference ">Other Videos and References</a>.</li>
+
+
+
+</ul>
+</section>
+    <section id="assignments">
+
+<h3 id="class-1">Assignments and Papers </h3>
+
+<twitterwidget class="twitter-tweet twitter-tweet-rendered" id="twitter-widget-0" data-tweet-id="291978260433219584" style="position: static; visibility: visible; display: block; transform: rotate(0deg); max-width: 100%; width: 500px; min-width: 220px; margin-top: 10px; margin-bottom: 10px;"></twitterwidget>
+<script async="" src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+
+<ul>
+  
+  <li> <a href="/resources/assignments/notes">Previous Year Papers and Assignments</a>.</li>
 
 
 
