--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -83,6 +83,7 @@ label
 		<option val="chapter10">Chapter10</option>
 		<option val="chapter11">Chapter11</option>
 		<option val="chapter12">Chapter12</option>
+        <option val="assignments">Assignments and Papers</option>
 		</select>
 
 
