added notes and papers

--- a/views/tableofcontents.ejs
+++ b/views/tableofcontents.ejs
@@ -510,7 +510,7 @@
 
 <ul>
   
-  <li> <a href="/resources/assignments/notes">Previous Year Papers and Assignments</a>.</li>
+  <li> <a href="/resources/Assignments and Papers/notes">Previous Year Papers and Assignments</a>.</li>
 
 
 
