updated title for contact

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<title>Write title for each page here</title>
+<title>Contact</title>
 
 <!-- Here you we will include other css and js files that are not to be used for every age -->
 <link rel="stylesheet" href="/public/stylesheet/cplayout1.css">
