--- a/views/about.ejs
+++ b/views/about.ejs
@@ -32,7 +32,7 @@
         </div>
         <div class="flip-card-text">
           <h3 style="text-align: center;color:grey">Prof. Amit Neogi</h3>
-          <p style="text-align: center;color:grey">Assistant Professor & Chief Warden<br> Ph.D.,IIT Kanpur</p>
+          <p style="text-align: center;color:grey">Assistant Professor<br> Ph.D.,IIT Kanpur</p>
         </div>
       
     </div>
