--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,17 +25,31 @@
 		
 		<ul class="nav navbar-nav navbar-right ml-auto">			
 
-				<% if (user) { %>
-            <li class="nav-item"><a href="/" class="nav-link">Welcome, <%=user.username%></a></li>
+		<% if (user&&user.admin) { %>
+
+			<li class="nav-item"><a href="/upload" class="nav-link">Upload Files</a></li>			
+			<li class="nav-item"><a href="/addvideo" class="nav-link">Add Video</a></li>
+			<li class="nav-item"><a href="/" class="nav-link">Welcome, <%=user.username%></a></li>
 			<li class="nav-item">
 				<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="/auth/logout">Loggout</a> -->
 				<a class=" nav-link btn  get-started-btn mt-1 mb-1 " href="/auth/logout" style="background:red; font-size:1.5rem; color:white;">LOGOUT</a>
 			</li>
-					<% } else { %>
+
+		<% } else if(user) { %>
+
+			<li class="nav-item"><a href="/" class="nav-link">Welcome, <%=user.username%></a></li>
+			<li class="nav-item">
+				<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="/auth/logout">Loggout</a> -->
+				<a class=" nav-link btn  get-started-btn mt-1 mb-1 " href="/auth/logout" style="background:red; font-size:1.5rem; color:white;">LOGOUT</a>
+			</li>
+
+		<% } else { %>
+
 			<li class="nav-item">
 				<!-- <a href="/auth/login" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1 nav-link">Login</a> -->
 					<a class=" nav-link btn  get-started-btn mt-1 mb-1 " href="/auth/login" style="background:red; font-size:1.5rem; color:white;"><i class="fa fa-fw fa-google"></i> Login with Google</a>
 			</li>
+
 			 <% } %>
 		</ul>
 	</div>
@@ -57,3 +71,4 @@
 	</div>
 </div>
 
+  
