--- a/views/home.ejs
+++ b/views/home.ejs
@@ -252,7 +252,7 @@ b{
 		<div class="col-md-6">
 			<h1>VISION</h1>
 			
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			<p>The website helps strengthen and enhance the teaching, research, and service of our college LNMIIT. The website provides intellectual growth and creativity by developing collections, facilitating access to information resources, teaching the effective use of information resources, and critical evaluation skills.</p>
 		</div>
 		<div class="col-md-6">
 			<img src="../public/team/vision.jpg" class="img-fluid">
@@ -270,9 +270,16 @@ b{
 			<img src="../public/team/values.jpg" class="img-fluid">
 		</div>
 		<div class="col-md-6">
-			<h1>VALUES</h1>
-			
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			<h1 style="margin-left:20px; ">VALUES</h1>
+			<ul style="font-size:17px; ">
+			<li>We recognize students as our primary focus.</li>
+
+<li>We foster cooperation by sharing resources through the web.</li>
+<li>We promote equity of access to information.</li>
+
+<li>We develop our human resources and support continuous professional development.</li>
+<li>We aspire to be a flexible and experimental organization that encourages innovation.</li>
+            </ul>
 		</div>
 		
 		
