--- a/views/instructor.ejs
+++ b/views/instructor.ejs
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="/public/stylesheet/instructor/magnific-popup.css"/>
 	<link rel="stylesheet" href="/public/stylesheet/instructor/style.css"/>
 	<link rel="stylesheet" href="/public/stylesheet/cplayout1.css"/>
+    <link href="https://www.lnmiit.ac.in/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 
 
 	<!--[if lt IE 9]>
