--- a/views/team.ejs
+++ b/views/team.ejs
@@ -16,7 +16,7 @@
 
 <!-- CSS only -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+<link href="https://www.lnmiit.ac.in/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
